Register 에서 입력 폼 완성

--- a/app/src/main/res/layout/activity_intro_step2.xml
+++ b/app/src/main/res/layout/activity_intro_step2.xml
@@ -68,6 +68,8 @@
                 android:fontFamily="@font/nanum_myeongjo_bold"
                 android:layout_marginTop="10dp"
                 android:gravity="right"
+                android:imeOptions="actionDone"
+                android:singleLine="true"
                 />
 
             <TextView
