--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#EFEBE5</color>
     <color name="colorPrimaryDark">#EFEBE5</color>
-    <color name="colorAccent">#EFEBE5</color>
+    <color name="colorAccent">#1c1c1c</color>
     <color name="backgroundWhite">#EFEBE5</color>
     <color name="backgroundRegisterWhite">#faf8f4</color>
     <color name="textBlack">#1c1c1c</color>
