--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -7,6 +7,7 @@
     <dimen name="text_middle">30sp</dimen>
     <dimen name="text_inner_small">12sp</dimen>
     <dimen name="text_inner_middle">16sp</dimen>
+    <dimen name="text_inner_small_between_middle">14sp</dimen>
 
     <dimen name="toolBar_height">52dp</dimen>
     <dimen name="tabBar_height">64dp</dimen>
