--- a/app/src/main/res/layout/item_contents.xml
+++ b/app/src/main/res/layout/item_contents.xml
@@ -1,158 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:orientation="vertical"
-    android:layout_marginTop="5dp"
-    android:layout_marginBottom="5dp"
-    >
-    
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="102dp"
         android:orientation="vertical"
-        android:padding="@dimen/margin_inner"
-        android:background="@drawable/border_line"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         >
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_height="102dp"
+            android:orientation="vertical"
+            android:padding="@dimen/margin_inner"
+            android:background="@drawable/border_line"
             >
-            <TextView
-                android:id="@+id/item_qtStartDate"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="@dimen/text_inner_small"
-                android:textColor="@color/textBlack"
-                android:gravity="left|center_vertical"
-                />
+                android:orientation="horizontal"
+                >
+                <TextView
+                    android:id="@+id/item_qtStartDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="@dimen/text_inner_small"
+                    android:textColor="@color/textBlack"
+                    android:gravity="left|center_vertical"
+                    />
+
+                <TextView
+                    android:id="@+id/item_qtDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:textSize="@dimen/text_inner_small"
+                    android:textColor="@color/textBlack"
+                    android:gravity="right|center_vertical"
+                    />
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/item_qtDate"
+                android:id="@+id/item_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:textSize="@dimen/text_inner_middle"
+                android:fontFamily="@font/nanum_myeongjo_bold"
+                android:textColor="@color/textBlack"
+                />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:textSize="@dimen/text_inner_small"
-                android:textColor="@color/textBlack"
+                android:orientation="horizontal"
                 android:gravity="right|center_vertical"
-                />
-        </LinearLayout>
+                >
+                <TextView
+                    android:id="@+id/item_startBible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/textBlack"
+                    android:textSize="@dimen/text_inner_small"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:gravity="center"
+                    />
+                <TextView
+                    android:id="@+id/item_startChapter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/textBlack"
+                    android:textSize="@dimen/text_inner_small"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:gravity="center"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/textBlack"
+                    android:textSize="@dimen/text_inner_small"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:gravity="center"
+                    android:text=":"
+                    />
+                <TextView
+                    android:id="@+id/item_startVers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/textBlack"
+                    android:textSize="@dimen/text_inner_small"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:gravity="center"
+                    />
 
-        <TextView
-            android:id="@+id/item_title"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_weight="1"
-            android:textSize="@dimen/text_inner_middle"
-            android:fontFamily="@font/nanum_myeongjo_bold"
-            android:textColor="@color/textBlack"
-            />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/textBlack"
+                    android:textSize="@dimen/text_inner_small"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:gravity="center"
+                    android:text="-"
+                    />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="right|center_vertical"
-            >
-            <TextView
-                android:id="@+id/item_startBible"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/text_inner_small"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:gravity="center"
-                />
-            <TextView
-                android:id="@+id/item_startChapter"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/text_inner_small"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:gravity="center"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/text_inner_small"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:gravity="center"
-                android:text=":"
-                />
-            <TextView
-                android:id="@+id/item_startVers"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/text_inner_small"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:gravity="center"
-                />
+                <TextView
+                    android:id="@+id/item_finishBible"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/textBlack"
+                    android:textSize="@dimen/text_inner_small"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:gravity="center"
+                    />
+                <TextView
+                    android:id="@+id/item_finishChapter"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/textBlack"
+                    android:textSize="@dimen/text_inner_small"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:gravity="center"
+                    />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/textBlack"
+                    android:textSize="@dimen/text_inner_small"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:gravity="center"
+                    android:text=":"
+                    />
+                <TextView
+                    android:id="@+id/item_finishVers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:textColor="@color/textBlack"
+                    android:textSize="@dimen/text_inner_small"
+                    android:paddingLeft="2dp"
+                    android:paddingRight="2dp"
+                    android:gravity="center"
+                    />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/text_inner_small"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:gravity="center"
-                android:text="-"
-                />
-
-            <TextView
-                android:id="@+id/item_finishBible"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/text_inner_small"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:gravity="center"
-                />
-            <TextView
-                android:id="@+id/item_finishChapter"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/text_inner_small"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:gravity="center"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/text_inner_small"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:gravity="center"
-                android:text=":"
-                />
-            <TextView
-                android:id="@+id/item_finishVers"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:textColor="@color/textBlack"
-                android:textSize="@dimen/text_inner_small"
-                android:paddingLeft="2dp"
-                android:paddingRight="2dp"
-                android:gravity="center"
-                />
+            </LinearLayout>
 
         </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
+</layout>
